MyDemoOrg/force-app/main/default/objects/Candidate__c/fields/candidate_email__c.field-meta.xml
<CustomField>
    <fullName>candidate_email__c</fullName>
    <label>candidate email</label>
    <type>Email</type>
</CustomField>