MyDemoOrg/force-app/main/default/objects/Candidate__c/fields/Marketing__c.field-meta.xml
<CustomField>
    <fullName>Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing</label>
    <type>Checkbox</type>
</CustomField>