MyDemoOrg/force-app/main/default/objects/Candidate__c/fields/Test_Formula__c.field-meta.xml
<CustomField>
    <fullName>Test_Formula__c</fullName>
    <formula>HYPERLINK(&quot;https://chintan14successpath-dev-ed.my.salesforce.com/&quot;&amp; Test_ID__c , &quot;Click to open&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Formula</label>
    <type>Text</type>
</CustomField>