MyDemoOrg/force-app/main/default/objects/Candidate__c/fields/Test_ID__c.field-meta.xml
<CustomField>
    <fullName>Test_ID__c</fullName>
    <label>Test ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>