MyDemoOrg/force-app/main/default/objects/Candidate__c/recordTypes/IT_development.recordType-meta.xml
<RecordType>
    <fullName>IT_development</fullName>
    <active>true</active>
    <label>IT development</label>
</RecordType>