MyDemoOrg/force-app/main/default/objects/Candidate__c/validationRules/Test_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Test_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Marketing__c   ,ISPICKVAL( Category__c , &apos;Sales&apos;) )</errorConditionFormula>
    <errorMessage>error throw</errorMessage>
</ValidationRule>